Добавлены методы выдачи списка организаций по рубрике, по зданию
