# docs/swagger.yaml
@@ -63,8 +63,6 @@ info:
 paths:
   /api/building/all-company:
     get:
-      consumes:
-      - application/json
       description: Get all company registered in a building
       operationId: getAllCompany
       parameters:
@@ -112,6 +110,41 @@ paths:
       tags:
       - Building
   /api/company/:
+    get:
+      description: Get company by id
+      operationId: getCompany
+      parameters:
+      - description: Company id
+        in: query
+        name: company_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.CompanyResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get company by id
+      tags:
+      - Company
     post:
       consumes:
       - application/json
@@ -150,4 +183,42 @@ paths:
       summary: Create company
       tags:
       - Company
+  /api/rubric/all-company:
+    get:
+      description: Get all rubric company (without pagination)
+      operationId: getAllRubricCompany
+      parameters:
+      - description: Rubric id
+        in: query
+        name: rubric_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/common.CompanyResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get all company in a rubric
+      tags:
+      - Rubric
 swagger: "2.0"
